feat: 기본 프로젝트 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ gradle-app.setting
 
 # 사용자
 .DS_Store
-1. 자바 ORM 표준 JPA 프로그래밍 - 기본편/ex1-hello-jpa.iml
+1. 자바 ORM 표준 JPA 프로그래밍 - 기본편/.idea
+1. 자바 ORM 표준 JPA 프로그래밍 - 기본편/ex1-hello-jpa.iml
 
 수업자료/
