--- a/3.실전! 스프링부트와 JPA 활용2 - API개발과 성능최적화/jpashop/src/main/resources/application.yml
+++ b/3.실전! 스프링부트와 JPA 활용2 - API개발과 성능최적화/jpashop/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
         format_sql: true
         hbm2ddl:
           auto: create
+        default_batch_fetch_size: 100
 
 logging:
   level:
