feat: API 고급- OSIV와 성능 최적화

--- a/3.실전! 스프링부트와 JPA 활용2 - API개발과 성능최적화/jpashop/src/main/resources/application.yml
+++ b/3.실전! 스프링부트와 JPA 활용2 - API개발과 성능최적화/jpashop/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
         hbm2ddl:
           auto: create
         default_batch_fetch_size: 100
+    open-in-view: false
 
 logging:
   level:
