--- a/4. 실전! 스프링 데이터 JPA/data-jpa/src/main/resources/application.yml
+++ b/4. 실전! 스프링 데이터 JPA/data-jpa/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
-#        show_sql: true
+        show_sql: true
+
 logging:
   level:
     org.hibernate.sql: debug
