--- a/4. 실전! 스프링 데이터 JPA/data-jpa/src/main/resources/application.yml
+++ b/4. 실전! 스프링 데이터 JPA/data-jpa/src/main/resources/application.yml
@@ -12,8 +12,14 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 2000
 
 logging:
   level:
     org.hibernate.sql: debug
     org.hibernate.type: trace
+
